Final changes in yml file and stream api in service class